Refactor edit meal